<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.DetayActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgUlkeBayrak"
                android:layout_width="@dimen/detayActivityLogoGenislik"
                android:layout_height="@dimen/detayActivityLogoYukseklik"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detayActivityTextMargin"
                android:text="@string/ulkeAdiTxt"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintEnd_toStartOf="@+id/imgUlkeBayrak"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUlkeBayrak" />

            <TextView
                android:id="@+id/txtUlkeAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintBottom_toBottomOf="@+id/TextView"
                app:layout_constraintStart_toEndOf="@+id/TextView"
                app:layout_constraintTop_toTopOf="@+id/TextView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detayActivityTextMargin"
                android:text="@string/ulkeKurulusuTxt"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintStart_toStartOf="@+id/TextView"
                app:layout_constraintTop_toBottomOf="@+id/TextView" />

            <TextView
                android:id="@+id/txtUlkeKurulus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detayActivityTextMargin"
                android:text="@string/ulkeKurucusuTxt"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/txtUlkeKurucusu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detayActivityTextMargin"
                android:text="@string/ulkeNufusTxt"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/txtUlkeNufus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/listItemMargin"
                android:text="@string/ulkeBulunduguYerTxt"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <ImageView
                android:id="@+id/imgUlkeLokasyon"
                android:layout_width="@dimen/detayBayrakGenislik"
                android:layout_height="@dimen/detayBayrakYukseklik"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtUlkeDetay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detayActivityAciklamaMargin"
                android:layout_marginTop="@dimen/detayActivityAciklamaMargin"
                android:textSize="@dimen/detayActivityTextPunto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUlkeLokasyon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>